# wasi-image-resize

./: Cargo.toml  Makefile  README.md
src/: main.rs  scale.rs
