[package]
name = "imageresize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["gif", "jpeg", "png", "webp"]

[profile.release]
strip = "debuginfo"
